[tool.poetry]
name = "geocoder"
version = "0.1.0"
description = ""
authors = ["Matvey Ilichev <matvey.ilichev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "21.2.0"
certifi = "2022.12.07"
charset-normalizer = "2.0.6"
idna = "3.2"
iniconfig = "1.1.1"
overpy = "0.6"
packaging = "21.0"
pluggy = "1.0.0"
py = "1.10.0"
pyparsing = "2.4.7"
pytest = "6.2.5"
pyyaml = "6.0"
requests = "2.26.0"
sqlalchemy = "1.4.25"
toml = "0.10.2"
urlencoder = "1.1"
urllib3 = "1.26.6"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "22.3.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
